todo-app/log-apps/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-apps
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: log-output-generate
          image: thesamsai/log-output-generate:v3
          resources:
            limits:
              cpu: "50m"
              memory: "25Mi"
          volumeMounts:
            - name: shared-log
              mountPath: /shared
        - name: log-output-view
          image: thesamsai/log-output-view:v4
          resources:
            limits:
              cpu: "150m"
              memory: "50Mi"
          volumeMounts:
            - name: shared-log
              mountPath: /shared
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /health
               port: 3000
